@@ -4,12 +4,13 @@ import com.app.trainerattendence.model.User;
 import com.app.trainerattendence.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,6 +18,7 @@ public class UserService {
 
     private final UserRepository userRepository;
 
+    // ✅ Register New User
     public User registerUser(User user) {
         if (user.getUserId() == null || user.getUserId().isEmpty()) {
             user.setUserId(UUID.randomUUID().toString());
@@ -24,26 +26,30 @@ public class UserService {
         return userRepository.save(user);
     }
 
+    // ✅ Get Only Normal Users (Exclude Admins)
     public List<User> getAllNormalUsers() {
         return userRepository.findAll()
                 .stream()
                 .filter(u -> "USER".equalsIgnoreCase(u.getRole()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    // ✅ Get All Users if needed internally
     public List<User> getAllUsers() {
         return userRepository.findAll();
     }
 
+    // ✅ Get By Email
     public User getUserByEmail(String email) {
         return userRepository.findByEmail(email);
     }
 
+    // ✅ Get By User ID
     public User getUserByUserId(String userId) {
         return userRepository.findByUserId(userId);
     }
 
-    // ✅ New Login Logic
+    // ✅ Login Service
     public Object loginUser(String email, String password) {
         User existingUser = userRepository.findByEmail(email);
 
@@ -61,11 +67,28 @@ public class UserService {
             return response;
         }
 
-        // ✅ Successful login
         response.put("status", "success");
         response.put("message", "Login successful");
         response.put("user", existingUser);
 
         return response;
+    }
+
+    // ✅ Upload Profile Photo (Binary)
+    public User uploadProfilePhoto(String userId, MultipartFile file) throws IOException {
+        User user = userRepository.findByUserId(userId);
+
+        if (user == null) {
+            return null;
+        }
+
+        user.setProfilePhoto(file.getBytes()); // Convert file → byte[]
+        return userRepository.save(user);
+    }
+
+    // ✅ Get Profile Photo (Binary)
+    public byte[] getProfilePhoto(String userId) {
+        User user = userRepository.findByUserId(userId);
+        return (user != null) ? user.getProfilePhoto() : null;
     }
 }
